# dk_public_dashboard

./: .env.example  .gitignore  FUNCTIONAL_SPEC.md  README.md  pyproject.toml
.github/workflows/: deploy-frontend.yml  deploy-worker.yml  update-delivery.yml
docs/superpowers/plans/: 2026-07-24-mobile-ui.md
docs/superpowers/specs/: 2026-07-24-mobile-ui-design.md
frontend/: index.html  main.jsx  package-lock.json  package.json
frontend/functions/: _middleware.js
frontend/functions/api/: proxy.js
frontend/public/: delivery.json  manifest.webmanifest
frontend/src/mobile/: MobileApp.jsx  MobileApp.test.jsx  MobileBidSheet.jsx  MobileBidSheet.test.jsx  mobile.css  mobileUtils.js  mobileUtils.test.js  pwaAssets.test.js  useIsMobile.js  useIsMobile.test.jsx
frontend/src/services/: api.js  apiBaseUrls.js  apiBaseUrls.test.js  pagesProxy.test.js
pipeline/: README.md  package-lock.json  package.json
pipeline/data/: delivery.sqlite
pipeline/src/: config.mjs  db.mjs  exportJson.mjs  ingestCsv.mjs  run.mjs  schedule.mjs  scrapeReport.mjs
worker/: .dev.vars.example  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
worker/src/: index.ts
worker/src/cache/: cache.ts
worker/src/config/: apiEndpoints.ts  items.ts
worker/src/routes/: bids.ts  contracts.ts  dashboard.ts  lofin.ts  mas.ts  procurement.ts  sharedState.ts
worker/src/services/: dataGoKrClient.ts
worker/src/transform/: aggregateDashboard.ts  normalizeBids.ts  normalizeContracts.ts  normalizeMas.ts  regionParser.ts
worker/src/types/: api.ts  dashboard.ts
(+3 files in other folders)
